--- a/score-compose/kafka-with-topics.provisioners.yaml
+++ b/score-compose/kafka-with-topics.provisioners.yaml
@@ -41,7 +41,7 @@
             sleep 1
           done &&
           echo 'Kafka is ready!' &&
-          {{- if .State.topics }}
+          {{- if and .State.topics (ne (len .State.topics) 0) }}
           {{- range $key, $topic := .State.topics }}
           kafka-topics --create --if-not-exists --bootstrap-server kafka:9092 --topic {{ $topic }} --partitions {{ $.State.topicConfig.partitions | default 3 }} --replication-factor {{ $.State.topicConfig.replicationFactor | default 1 }} &&
           {{- end }}
@@ -57,11 +57,7 @@
   
   state: |
     brokers: ${.Params.brokers | default "kafka:9092"}
-    {{- if .Params.topics }}
     topics: ${.Params.topics}
-    {{- else }}
-    topics: {}
-    {{- end }}
     topicConfig:
       partitions: ${.Params.topicConfig.partitions | default 3}
       replicationFactor: ${.Params.topicConfig.replicationFactor | default 1}
