Fix Kafka provisioner template syntax

--- a/score-compose/mysql-with-migrations.provisioners.yaml
+++ b/score-compose/mysql-with-migrations.provisioners.yaml
@@ -17,7 +17,9 @@
         timeout: 2s
         retries: 10
       volumes:
-        - mysql-data:/var/lib/mysql
+        - type: volume
+          source: mysql-data
+          target: /var/lib/mysql
     
     mysql-init:
       image: mysql:8.0
